Completed the hidden search widget small feature project

--- a/Hambuger Navigation/style.css
+++ b/Hambuger Navigation/style.css
@@ -111,7 +111,7 @@ nav ul li + li + li {
 }
 
 .content img {
-  /* max-width: 100vw; */
+  max-width: 100vw;
   display: flex;
   align-items: center;
   justify-content: center;
